data/collection/fixes/descriptions/java/JDK-8146727
This test fails on Windows because of path separator problems

Stacktrace

Execution failed: `main' threw exception: java.lang.reflect.InvocationTargetException    

Standard Output

Testing filter: -i pkga/A.java
compile: [-i, pkga/A.java, src, --server:portfile=testportfile,background=false, -d, bin, --state-dir=state-dir]
Testing filter: -x pkga/A.java
compile: [-x, pkga/A.java, src, --server:portfile=testportfile,background=false, -d, bin, --state-dir=state-dir]
    

Standard Error

Recompiling test class...
...\jtreg\work\scratch\src\pkga\subpkg\Xx.java:1: error: illegal character: '\'
package pkga\subpkg; class Xx {}
            ^
1 error
...\jtreg\work\scratch\src\pkga\subpkg\subsubpkg\Y.java:1: error: illegal character: '\'
package pkga\subpkg\subsubpkg; class Y {}
            ^
...\jtreg\work\scratch\src\pkga\subpkg\subsubpkg\Y.java:1: error: illegal character: '\'
package pkga\subpkg\subsubpkg; class Y {}
                   ^
2 errors
java.lang.reflect.InvocationTargetException
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:520)
	at Wrapper.main(Wrapper.java:55)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:520)
	at com.sun.javatest.regtest.agent.MainActionHelper$SameVMRunnable.run(MainActionHelper.java:226)
	at java.lang.Thread.run(Thread.java:804)
Caused by: java.lang.AssertionError: Compilation failed unexpectedly.
	at com.sun.tools.javac.util.Assert.error(Assert.java:162)
	at com.sun.tools.javac.util.Assert.check(Assert.java:95)
	at IncludeExcludePatterns.testFilter(IncludeExcludePatterns.java:133)
	at IncludeExcludePatterns.testPattern(IncludeExcludePatterns.java:118)
	at IncludeExcludePatterns.runTest(IncludeExcludePatterns.java:77)
	at IncludeExcludePatterns.main(IncludeExcludePatterns.java:66)
	... 11 more

JavaTest Message: Test threw exception: java.lang.reflect.InvocationTargetException
JavaTest Message: shutting down test

    